--- a/index.html
+++ b/index.html
@@ -4,24 +4,24 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Main Page</title>
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
     <header>
       <nav>
         <ul class="menu">
-          <li><a href="#">Главная</a></li>
-          <li><a href="catalog.html">Каталог</a></li>
-          <li><a href="#">Контакты</a></li>
+          <li><a class="link" href="#">Главная</a></li>
+          <li><a class="link" href="catalog.html">Каталог</a></li>
+          <li><a class="link" href="#">Контакты</a></li>
         </ul>
       </nav>
     </header>
     <div class="wrapper"> 
         <div class="main_page">
-            <h1>Главная страница</h1>
+            <h1 class="title_h1">Главная страница</h1>
         </div>
         <div class="par_1">
-            <p>
+            <p class="par">
                 Lorem ipsum dolor, sit amet consectetur adipisicing elit. Mollitia quaerat tenetur laborum eum, 
                 labore delectus modi aliquam quidem eius a doloremque ullam esse officiis. Exercitationem obcaecati 
                 quaerat, commodi fugiat laborum nam, quam ut error tempora veritatis neque deserunt similique eos 
@@ -29,10 +29,10 @@
             </p>
         </div>
         <div class="main_page">
-            <h2>Добро пожаловать на сайт!</h2>
+            <h2 class="title_h2">Добро пожаловать на сайт!</h2>
         </div>
         <div class="par_1">
-            <p>
+            <p class="par">
                 Lorem ipsum dolor, sit amet consectetur adipisicing elit. Mollitia quaerat tenetur laborum eum, 
                 labore delectus modi aliquam quidem eius a doloremque ullam esse officiis. Exercitationem obcaecati 
                 quaerat, commodi fugiat laborum nam, quam ut error tempora veritatis neque deserunt similique eos 
@@ -40,7 +40,7 @@
             </p>
         </div>
         <div class="par_1">
-            <p>
+            <p class="par">
                 Lorem ipsum dolor, sit amet consectetur adipisicing elit. Mollitia quaerat tenetur laborum eum, 
                 labore delectus modi aliquam quidem eius a doloremque ullam esse officiis. Exercitationem obcaecati 
                 quaerat, commodi fugiat laborum nam, quam ut error tempora veritatis neque deserunt similique eos 
@@ -48,7 +48,7 @@
             </p>
         </div>
         <div class="par_1">
-            <p>
+            <p class="par">
                 Lorem ipsum dolor, sit amet consectetur adipisicing elit. Mollitia quaerat tenetur laborum eum, 
                 labore delectus modi aliquam quidem eius a doloremque ullam esse officiis. Exercitationem obcaecati 
                 quaerat, commodi fugiat laborum nam, quam ut error tempora veritatis neque deserunt similique eos 
