--- a/catalog.html
+++ b/catalog.html
@@ -4,25 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Catalog</title>
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header>
         <nav>
           <ul class="menu">
-            <li><a href="index.html">Главная</a></li>
-            <li><a href="#">Каталог</a></li>
-            <li><a href="#">Контакты</a></li>
+            <li><a class="link" href="index.html">Главная</a></li>
+            <li><a class="link" href="#">Каталог</a></li>
+            <li><a class="link" href="#">Контакты</a></li>
           </ul>
         </nav>
       </header>
     <div class="wrapper"> 
       <div class="main_page">
-          <h1>Каталог</h1>
+          <h1 class="title">Каталог</h1>
       </div>
       
       <div class="par_1">
-        <p>
+        <p class="par">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate dolores ipsa nam repudiandae 
             sed illo perferendis. Perferendis cupiditate natus veritatis veniam ullam quisquam quam eaque ut 
             saepe vero, voluptates voluptas consequuntur molestias animi? Quae nisi quis error doloremque deleniti 
@@ -39,8 +39,8 @@
       <div class="goods">
         <div class="good">
           <img src="img/back-view-grey-car-standing-bridge.jpg" alt="first_car">
-          <h1>First car</h1>
-          <p>
+          <h1 class="title_h1">First car</h1>
+          <p class="par">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat eveniet suscipit qui deserunt 
             accusantium fuga, temporibus quis mollitia dolores repellat culpa iste provident assumenda tempore, 
             veniam alias autem impedit quaerat.
@@ -48,8 +48,8 @@
         </div>
         <div class="good">
           <img src="img/front-view-black-sedan-sport-car-bridge.jpg" alt="second_car">
-          <h1>Second car</h1>
-          <p>
+          <h1 class="title_h1">Second car</h1>
+          <p class="par">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat eveniet suscipit qui deserunt 
             accusantium fuga, temporibus quis mollitia dolores repellat culpa iste provident assumenda tempore, 
             veniam alias autem impedit quaerat.
@@ -57,8 +57,8 @@
         </div>
         <div class="good">
           <img src="img/white-car-garage.jpg" alt="third_car">
-          <h1>Third car</h1>
-          <p>
+          <h1 class="title_h1">Third car</h1>
+          <p class="par">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat eveniet suscipit qui deserunt 
             accusantium fuga, temporibus quis mollitia dolores repellat culpa iste provident assumenda tempore, 
             veniam alias autem impedit quaerat.
